--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Rock-Paper-Scissors</title>
 </head>
 <body>
-    
+    <div class="result">
+        <div class="player-choices">
+
+        </div>
+        <div class="current-score">
+            
+        </div>
+    </div>
+    <div class="button-holder">
+        <button type="button" data-value="1">Rock</button>
+        <button type="button" data-value="2">Paper</button>
+        <button type="button" data-value="3">Scissors</button>
+    </div>
 </body>
 </html>
