Add basic styling to the page elements

--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
 </head>
 <body>
     <div class="result">
+
         <div class="player-choices">
-
+            <div class="pc-choice"></div>
+            <div class="cp-choice"></div>
         </div>
+
         <div class="current-score">
-
+            <p class="pc"></p>
+            <p class="dash">-</p>
+            <p class="cp"></p>
         </div>
+
     </div>
     <div class="button-holder">
-        <button type="button" data-value="1">Rock</button>
-        <button type="button" data-value="2">Paper</button>
-        <button type="button" data-value="3">Scissors</button>
+        <button type="button" class="selection" data-value="1">&#129704;</button>
+        <button type="button" class="selection" data-value="2">&#128196;</button>
+        <button type="button" class="selection" data-value="3">&#9996;</button>
     </div>
 </body>
 </html>
